--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-spring": "^8.0.27",
     "styled-components": "^4.3.2",
     "styled-normalize": "^8.0.6",
     "tailwind.macro": "^1.0.0-alpha.10",
