--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "node": ">=10.10"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.5.7",
+    "@mdx-js/react": "^1.5.7",
     "@sentry/browser": "^5.7.1",
     "@sentry/cli": "^1.48.0",
     "@types/node": "^12.6.9",
@@ -22,7 +24,9 @@
     "gatsby-plugin-env-variables": "^1.0.1",
     "gatsby-plugin-intercom": "^0.1.4",
     "gatsby-plugin-manifest": "^2.2.4",
+    "gatsby-plugin-mdx": "^1.1.3",
     "gatsby-plugin-offline": "^2.2.4",
+    "gatsby-plugin-page-creator": "^2.2.1",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.1.2",
     "gatsby-plugin-segment-js": "^3.0.1",
