--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-plugin-sharp": "^2.2.9",
     "gatsby-plugin-sitemap": "^2.2.28",
     "gatsby-plugin-styled-components": "^3.1.2",
+    "gatsby-plugin-tags": "^2.3.7",
     "gatsby-plugin-typescript": "^2.1.2",
     "gatsby-source-filesystem": "^2.1.8",
     "gatsby-transformer-remark": "^2.7.1",
