--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gatsby-source-filesystem": "^2.1.8",
     "gatsby-transformer-remark": "^2.7.1",
     "gatsby-transformer-sharp": "^2.2.5",
+    "gatsby-transformer-yaml": "^2.3.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-device-detect": "^1.11.14",
