--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-helmet": "^5.2.1",
     "react-spring": "^8.0.27",
     "react-stickynode": "^2.1.1",
+    "sharp": "^0.25.2",
     "styled-components": "^4.3.2",
     "styled-normalize": "^8.0.6",
     "tailwind.macro": "^1.0.0-alpha.10",
