--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "gatsby-plugin-styled-components": "^3.1.2",
     "gatsby-plugin-tags": "^2.3.7",
     "gatsby-plugin-typescript": "^2.1.2",
+    "gatsby-remark-prismjs": "^3.5.0",
     "gatsby-source-filesystem": "^2.1.8",
     "gatsby-transformer-remark": "^2.7.1",
     "gatsby-transformer-sharp": "^2.2.5",
     "gatsby-transformer-yaml": "^2.3.1",
+    "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-device-detect": "^1.11.14",
