--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@types/react-helmet": "^6.0.0",
     "@types/styled-components": "^5.1.1",
     "babel-plugin-styled-components": "^1.10.6",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.23.3",
     "gatsby-background-image": "^0.10.2",
+    "gatsby-cli": "^2.12.68",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-env-variables": "^1.0.1",
     "gatsby-plugin-intercom": "^0.1.4",
@@ -39,6 +41,7 @@
     "gatsby-source-filesystem": "^2.1.8",
     "gatsby-transformer-remark": "^2.7.1",
     "gatsby-transformer-sharp": "^2.2.5",
+    "global": "^4.4.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-device-detect": "^1.11.14",
