--- a/netlify.toml
+++ b/netlify.toml
@@ -10,9 +10,9 @@
     static.intercomassets.com www.google.co.in www.google.co.nz www.google.ca www.google.com.br www.google.com.do www.google.es www.youtube.com wss 
     www.google.fr www.google.hu www.google.lu www.linkedin.com; script-src 'self' cdn.segment.io js.intercomcdn.com widget.intercom.io cdn.heapanalytics.com 
     js-na1.hs-scripts.com js.hs-analytics.net js.hs-banner.com js.hscollectedforms.net www.google-analytics.com www.googletagmanager.com 
-    connect.facebook.net js.hsadspixel.net snap.licdn.com; script-src-elem 'self' widget.intercom.io www.google-analytics.com www.googletagmanager.com 
+    js.hsadspixel.net snap.licdn.com; script-src-elem 'self' widget.intercom.io www.google-analytics.com www.googletagmanager.com 
     cdn.heapanalytics.com cdn.segment.io js-na1.hs-scripts.com js.hs-analytics.net js.hs-banner.com js.hscollectedforms.net js.intercomcdn.com 
-    connect.facebook.net js.hsadspixel.net snap.licdn.com www.google.com; style-src 'self' fonts.googleapis.com; style-src-elem 'self' fonts.googleapis.com; 
+    js.hsadspixel.net snap.licdn.com www.google.com; style-src 'self' fonts.googleapis.com; style-src-elem 'self' fonts.googleapis.com; 
     img-src 'self' data: www.google-analytics.com heapanalytics.com images.ctfassets.net track.hubspot.com js.intercomcdn.com static.intercomassets.com 
     i.ytimg.com px.ads.linkedin.com www.facebook.com www.google.ca www.google.com www.gstatic.com downloads.intercomcdn.com messenger-apps.intercom.io 
     p.adsymptotic.com www.google.co.jp www.google.co.kr www.google.co.uk www.google.de www.google.gr www.google.ro www.google.ru www.linkedin.com 
