--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
     "@types/react": "^17.0.4",
     "clipboardy": "^2.3.0",
     "prettier": "^2.2.1",
-    "typescript": "^4.2.4"
+    "typescript": "4.2.4"
   }
 }
