--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "typescript": "4.2.4"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^3.1.0",
     "@types/node": "^15.0.1",
     "@types/react": "^17.0.4",
     "clipboardy": "^2.3.0",
-    "prettier": "^2.2.1",
-    "typescript": "4.2.4"
+    "prettier": "^2.2.1"
   }
 }
