--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.3.0",
     "@mdx-js/loader": "^1.6.22",
+    "@segment/snippet": "^4.13.2",
     "@types/react-slick": "^0.23.4",
     "contentful": "^8.3.7",
     "dayjs": "^1.10.5",
