--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.3.0",
     "@mdx-js/loader": "^1.6.22",
     "@segment/snippet": "^4.13.2",
+    "@types/js-cookie": "^2.2.6",
     "@types/react-slick": "^0.23.4",
     "contentful": "^8.3.7",
     "dayjs": "^1.10.5",
